test #465 My Files text wrapping issues
git-svn-id: https://subversion.assembla.com/svn/file_sender/filesender/branches/filesender-1.5@709 8555b757-d854-4b86-925a-82fd84c90ff4

--- a/www/css/default.css
+++ b/www/css/default.css
@@ -274,4 +274,13 @@ a:link, a:visited {
 	color: #000;
 	font-weight: bold;
 }
+.HardBreak
 
+{
+white-space: pre-wrap; /* css-3 */
+white-space: -moz-pre-wrap; /* Mozilla, since 1999 */
+white-space: -pre-wrap; /* Opera 4-6 */
+white-space: -o-pre-wrap; /* Opera 7 */
+word-wrap: break-word; /* Internet Explorer 5.5+ */
+
+}
